# PySqlit

./: README.API.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: README.md  README_ENHANCED_DATAFILE.md  advanced-topics.md  api-reference.md  architecture.md  collect .md  development.md  index.md  limitations.md  usage-guide.md
examples/: 01_basic_connection.py  02_insert_and_query.py  03_update_and_delete.py  04_transactions.py  05_parameterized_queries.py  06_backup_and_restore.py  07_batch_operations.py  08_indexing_and_optimization.py  drop_table_error_messages_example.py  drop_table_restriction_example.py  drop_table_with_data_example.py  enhanced_datafile_example.py  test_csv_import.py  test_drop_table_repl.py  transaction_log_example.py
pysqlit/: __init__.py  art.py  concurrent_storage.py  constants.py  database.py  exceptions.py  models.py  parser.py  pysqlit_api.py  repl.py  transaction.py
src/pysqlit/: __init__.py  __version__.py  backup.py  btree.py  concurrent_storage.py  core.py  cursor.py  ddl.py  enhanced_datafile.py  integrity.py  pysqlit_api.py  repl.py  storage.py
tests/: FINAL_TEST_REPORT.md  TESTING_PLAN.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_backup.py  test_btree.py  test_database.py  test_ddl.py  test_delete.py  test_drop_table_fix.py  test_drop_table_with_data.py  test_drop_table_with_data_restriction.py  test_enhanced_datafile.py  test_exceptions.py  test_fix.py  test_fixes.py  test_init.py  test_integration.py  test_main.py  test_models.py  test_parser.py  test_repl.py  test_repl_drop_table.py  test_storage.py  test_transaction.py
