[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]        
build-backend = "uv_build"               

[project]
name = "PySqlit"        
dynamic = ["version"]                  
description = "Python版sqlite引擎"
authors = [
    {name = "Python51888"},  
]
readme = "README.md"      
requires-python = ">=3.11"    
license = {text = "MIT"}
keywords = ["pysqlite", "sqlite", "sqlite3", "pysqlit", "PySqlit","PySqlite"]   
dependencies = [
    "black>=22.0",  
    "fastmcp>=2.12.2",  
    "mypy>=1.0",  
    "pytest>=7.0",  
    "pytest-cov>=4.0",  
]
classifiers = [  
    Development Status :: 5 - Production/Stable",         
    "Programming Language :: Python :: 3.11",  
    "License :: OSI Approved :: MIT License",  
    "Operating System :: Microsoft :: Windows",  
    "Intended Audience :: Developers",  
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",  
]
[project.urls]
Homepage = "https://github.com/Python51888/PySqlit"      
Documentation = "https://zread.ai/Python51888/PySqlit"  
Repository = "https://github.com/Python51888/PySqlit"  

[tool.uv.version]
source = "file"
path = [
    "PySqlit/pysqlit/__init__.py",  
    "PySqlit/__version__.py"         
]
pattern = "__version__ = \"{version}\""                                             
